--- a/Isabella/Index.html
+++ b/Isabella/Index.html
@@ -4,3 +4,5 @@
 <head>
   <meta charset="utf-8" />
   <h1> Isabella's page :) </h1>
+  <p>Marvin Chun was born and raised in California, USA. His family moved back to Korea when he was 12 years old and due to not understanding the language and culture, he faced major challenges. He struggled throughout highschool, both emotionally and academically. Marvin’s academic achievements and research contributions since graduating highschool are a testament to his resilience and determination. 
+</p>
